--- a/relabel-to-front/nbproject/project.properties
+++ b/relabel-to-front/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=relabel.to.front.RelabelToFront
+main.class=relabel.to.front.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
