--- a/relabel-to-front/nbproject/project.properties
+++ b/relabel-to-front/nbproject/project.properties
@@ -124,7 +124,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=GUI.MainWindow
+main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
